@@ -12,6 +12,8 @@ Version 1.2.1
 
 This version has not been released yet.
 
+ * Fix various bugs in the URL rewriter when recursion is involved.
+
 Version 1.2.0
 -------------
 
