@@ -6,6 +6,11 @@ Version 1.2.1
 
 This version has not been released yet.
 
+HTTP Interface:
+
+ * No longer rewrites the X-CouchDB-Requested-Path during recursive
+   calls to the rewriter.
+
 Version 1.2.0
 -------------
 
